--- a/AirBoard/AirBoard/Base.lproj/Main.storyboard
+++ b/AirBoard/AirBoard/Base.lproj/Main.storyboard
@@ -222,103 +222,103 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="660"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rigistration" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="49x-gg-qqQ">
-                                        <rect key="frame" x="8" y="394.5" width="86.5" height="20.5"/>
+                                        <rect key="frame" x="8" y="402.5" width="86.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XB6-Ps-ab6">
-                                        <rect key="frame" x="8" y="423" width="47.5" height="20.5"/>
+                                        <rect key="frame" x="8" y="431" width="47.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Model Code (hex)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hi4-rh-w9I">
-                                        <rect key="frame" x="8" y="451.5" width="136.5" height="20.5"/>
+                                        <rect key="frame" x="8" y="459.5" width="136.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Number Registration" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="58v-0Z-7dX">
-                                        <rect key="frame" x="174" y="394.5" width="193" height="20.5"/>
+                                        <rect key="frame" x="174" y="402.5" width="193" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Model Code" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fko-vD-ueJ">
-                                        <rect key="frame" x="174" y="423" width="193" height="20.5"/>
+                                        <rect key="frame" x="174" y="431" width="193" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Hex ICAO Airplane" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahh-Z5-Ik9">
-                                        <rect key="frame" x="174" y="451.5" width="193" height="20.5"/>
+                                        <rect key="frame" x="174" y="459.5" width="193" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Engines" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yL6-cX-22o">
-                                        <rect key="frame" x="8" y="480" width="60.5" height="20.5"/>
+                                        <rect key="frame" x="8" y="488" width="60.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Engines Count x Type" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bdF-TF-xEu">
-                                        <rect key="frame" x="174" y="480" width="193" height="20.5"/>
+                                        <rect key="frame" x="174" y="488" width="193" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="30" placeholderIntrinsicHeight="21" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NoR-G7-7bs">
-                                        <rect key="frame" x="8" y="508.5" width="30" height="21"/>
+                                        <rect key="frame" x="8" y="516.5" width="30" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="50.5" placeholderIntrinsicHeight="21" text="Owner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5SX-op-iAC">
-                                        <rect key="frame" x="8" y="537" width="50.5" height="21"/>
+                                        <rect key="frame" x="8" y="545" width="50.5" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Plane Age" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5WZ-pC-JWC">
-                                        <rect key="frame" x="174" y="509" width="193" height="20.5"/>
+                                        <rect key="frame" x="174" y="517" width="193" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Owner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RcB-Iy-QJE">
-                                        <rect key="frame" x="174" y="537.5" width="193" height="20.5"/>
+                                        <rect key="frame" x="174" y="545.5" width="193" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Departure ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ujl-Kt-Ud2">
-                                        <rect key="frame" x="8" y="279" width="129.5" height="20.5"/>
+                                        <rect key="frame" x="8" y="287" width="129.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" name="controlAccentColor" catalog="System" colorSpace="catalog"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arrival ICAO" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vHq-aS-fNN">
-                                        <rect key="frame" x="267.5" y="279" width="99.5" height="20.5"/>
+                                        <rect key="frame" x="267.5" y="287" width="99.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <color key="textColor" name="controlAccentColor" catalog="System" colorSpace="catalog"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Departure City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bAH-1L-aiB">
-                                        <rect key="frame" x="8" y="303.5" width="130" height="20.5"/>
+                                        <rect key="frame" x="8" y="311.5" width="130" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arrival City" textAlignment="right" lineBreakMode="headTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Np-tV-1y7">
-                                        <rect key="frame" x="212" y="303.5" width="155" height="20.5"/>
+                                        <rect key="frame" x="212" y="311.5" width="155" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="firstBaseline" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="yA6-oW-dif">
-                                        <rect key="frame" x="8" y="336" width="358.5" height="42.5"/>
+                                        <rect key="frame" x="8" y="344" width="358.5" height="42.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Vqt-YV-vUK">
                                                 <rect key="frame" x="0.0" y="0.0" width="113" height="42.5"/>
@@ -374,14 +374,14 @@
                                         </subviews>
                                     </stackView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nt3-MA-sDX">
-                                        <rect key="frame" x="8" y="0.0" width="359" height="263"/>
+                                        <rect key="frame" x="8" y="8" width="359" height="263"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="359" id="1lv-Kh-ytH"/>
                                             <constraint firstAttribute="height" constant="263" id="dzh-JZ-mec"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fea-J7-AXQ">
-                                        <rect key="frame" x="125.5" y="587" width="124" height="32"/>
+                                        <rect key="frame" x="125.5" y="595" width="124" height="32"/>
                                         <state key="normal" title="Show route" image="route">
                                             <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
@@ -403,7 +403,6 @@
                                     <constraint firstItem="3Np-tV-1y7" firstAttribute="top" secondItem="vHq-aS-fNN" secondAttribute="bottom" constant="4" id="7Yy-0H-Nvf"/>
                                     <constraint firstItem="ujl-Kt-Ud2" firstAttribute="leading" secondItem="25D-p5-KfW" secondAttribute="leading" constant="8" id="8Rb-cF-kBY"/>
                                     <constraint firstItem="XB6-Ps-ab6" firstAttribute="top" secondItem="49x-gg-qqQ" secondAttribute="bottom" constant="8" id="9E4-Lg-w9x"/>
-                                    <constraint firstItem="nt3-MA-sDX" firstAttribute="top" secondItem="25D-p5-KfW" secondAttribute="top" id="C6n-Xq-Qhi"/>
                                     <constraint firstAttribute="trailing" secondItem="3Np-tV-1y7" secondAttribute="trailing" constant="8" id="Djb-cC-kzB"/>
                                     <constraint firstItem="Hi4-rh-w9I" firstAttribute="top" secondItem="XB6-Ps-ab6" secondAttribute="bottom" constant="8" id="Dwb-qd-teP"/>
                                     <constraint firstItem="5SX-op-iAC" firstAttribute="top" secondItem="NoR-G7-7bs" secondAttribute="bottom" constant="7.5" id="GbL-9b-NP2"/>
@@ -434,6 +433,7 @@
                                     <constraint firstItem="NoR-G7-7bs" firstAttribute="leading" secondItem="25D-p5-KfW" secondAttribute="leading" constant="8" id="igU-EV-EWe"/>
                                     <constraint firstItem="5SX-op-iAC" firstAttribute="centerY" secondItem="RcB-Iy-QJE" secondAttribute="centerY" id="k4k-4k-lOr"/>
                                     <constraint firstItem="yL6-cX-22o" firstAttribute="leading" secondItem="25D-p5-KfW" secondAttribute="leading" constant="8" id="kFT-ZO-Lkk"/>
+                                    <constraint firstItem="nt3-MA-sDX" firstAttribute="top" secondItem="25D-p5-KfW" secondAttribute="top" constant="8" id="kkk-Zt-bWe"/>
                                     <constraint firstItem="yA6-oW-dif" firstAttribute="leading" secondItem="25D-p5-KfW" secondAttribute="leading" constant="8" id="nhc-qe-8gj"/>
                                     <constraint firstItem="49x-gg-qqQ" firstAttribute="top" secondItem="yA6-oW-dif" secondAttribute="bottom" constant="16" id="nng-T6-BIe"/>
                                     <constraint firstItem="3Np-tV-1y7" firstAttribute="leading" secondItem="bAH-1L-aiB" secondAttribute="trailing" constant="74" id="o4o-kt-HuM"/>
