--- a/AirBoard/AirBoard/Base.lproj/Main.storyboard
+++ b/AirBoard/AirBoard/Base.lproj/Main.storyboard
@@ -492,7 +492,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DeC-oB-nFn" customClass="GMSMapView">
-                                <rect key="frame" x="0.0" y="20" width="375" height="627"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="30" placeholderIntrinsicHeight="30" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3WX-oZ-Dyw">
                                         <rect key="frame" x="304" y="44" width="33" height="30"/>
@@ -542,7 +542,7 @@
                             <constraint firstItem="DeC-oB-nFn" firstAttribute="leading" secondItem="4XN-cG-iDe" secondAttribute="leading" id="1pN-k9-giw"/>
                             <constraint firstItem="DeC-oB-nFn" firstAttribute="top" secondItem="4XN-cG-iDe" secondAttribute="top" id="NIs-na-TW0"/>
                             <constraint firstItem="DeC-oB-nFn" firstAttribute="trailing" secondItem="4XN-cG-iDe" secondAttribute="trailing" id="YyL-Hc-fcz"/>
-                            <constraint firstItem="4XN-cG-iDe" firstAttribute="bottom" secondItem="DeC-oB-nFn" secondAttribute="bottom" constant="20" id="t8A-hm-Qv5"/>
+                            <constraint firstItem="4XN-cG-iDe" firstAttribute="bottom" secondItem="DeC-oB-nFn" secondAttribute="bottom" id="sQo-vR-x8T"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="4XN-cG-iDe"/>
                     </view>
