--- a/AirBoard/AirBoard/Base.lproj/Main.storyboard
+++ b/AirBoard/AirBoard/Base.lproj/Main.storyboard
@@ -20,77 +20,50 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Qqr-sf-Rbr"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AirportCell" rowHeight="126" id="uqM-2R-yH0" customClass="AirportTableViewCell" customModule="AirBoard" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="126"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AirportCell" rowHeight="110" id="uqM-2R-yH0" customClass="AirportTableViewCell" customModule="AirBoard" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="110"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uqM-2R-yH0" id="IEG-GY-uj3">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="125.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="109.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Airport:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LTM-Go-kb6">
-                                            <rect key="frame" x="158.5" y="11" width="58" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Airport" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M7W-eZ-Pm3">
+                                            <rect key="frame" x="16" y="11" width="343" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qnu-vl-Tyx">
-                                            <rect key="frame" x="16" y="71.5" width="35" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" text="City" textAlignment="natural" lineBreakMode="characterWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="riJ-OJ-tLu">
+                                            <rect key="frame" x="16" y="39.5" width="343" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="170" placeholderIntrinsicHeight="17" text="City Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOM-BF-NWf">
-                                            <rect key="frame" x="16" y="96.5" width="170" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ICAO code:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Oi-YZ-LyO">
-                                            <rect key="frame" x="272" y="71.5" width="87" height="21"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Icao" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="47U-CQ-hti">
+                                            <rect key="frame" x="16" y="68" width="343" height="22.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="36" placeholderIntrinsicHeight="18" text="Icao" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="els-gi-lKf">
-                                            <rect key="frame" x="272" y="96.5" width="87" height="18"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="87" id="L9y-D0-ksz"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
-                                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Airport Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UR0-e7-76T">
-                                            <rect key="frame" x="16" y="36" width="343" height="19.5"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                            <color key="textColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                     <gestureRecognizers/>
                                     <constraints>
-                                        <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="AOM-BF-NWf" secondAttribute="trailing" constant="189" id="Hqj-Kg-rAY"/>
-                                        <constraint firstItem="els-gi-lKf" firstAttribute="top" secondItem="9Oi-YZ-LyO" secondAttribute="bottom" constant="4" id="K4y-w1-amA"/>
-                                        <constraint firstItem="LTM-Go-kb6" firstAttribute="centerX" secondItem="IEG-GY-uj3" secondAttribute="centerX" id="Mc3-Sv-VT7"/>
-                                        <constraint firstItem="UR0-e7-76T" firstAttribute="top" secondItem="LTM-Go-kb6" secondAttribute="bottom" constant="4" id="Ob9-z7-7da"/>
-                                        <constraint firstItem="AOM-BF-NWf" firstAttribute="top" secondItem="qnu-vl-Tyx" secondAttribute="bottom" constant="4" id="RBC-IQ-Lta"/>
-                                        <constraint firstItem="qnu-vl-Tyx" firstAttribute="leading" secondItem="IEG-GY-uj3" secondAttribute="leading" constant="16" id="V6e-Ai-uRD"/>
-                                        <constraint firstAttribute="trailing" secondItem="UR0-e7-76T" secondAttribute="trailing" constant="16" id="XgE-31-lVw"/>
-                                        <constraint firstItem="9Oi-YZ-LyO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="qnu-vl-Tyx" secondAttribute="trailing" constant="8" symbolic="YES" id="Zl0-Z6-Uj2"/>
-                                        <constraint firstItem="LTM-Go-kb6" firstAttribute="top" secondItem="IEG-GY-uj3" secondAttribute="top" constant="11" id="cvw-Eb-Mxa"/>
-                                        <constraint firstItem="qnu-vl-Tyx" firstAttribute="centerY" secondItem="9Oi-YZ-LyO" secondAttribute="centerY" id="foW-Z1-5f8"/>
-                                        <constraint firstItem="els-gi-lKf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="AOM-BF-NWf" secondAttribute="trailing" constant="8" symbolic="YES" id="jEW-l6-3AH"/>
-                                        <constraint firstItem="qnu-vl-Tyx" firstAttribute="top" secondItem="UR0-e7-76T" secondAttribute="bottom" constant="16" id="jel-MS-e3J"/>
-                                        <constraint firstAttribute="trailing" secondItem="9Oi-YZ-LyO" secondAttribute="trailing" constant="16" id="mc6-5U-h11"/>
-                                        <constraint firstAttribute="trailing" secondItem="els-gi-lKf" secondAttribute="trailing" constant="16" id="mpQ-NZ-i5z"/>
-                                        <constraint firstItem="AOM-BF-NWf" firstAttribute="leading" secondItem="IEG-GY-uj3" secondAttribute="leading" constant="16" id="ySo-Th-JOW"/>
-                                        <constraint firstItem="UR0-e7-76T" firstAttribute="leading" secondItem="IEG-GY-uj3" secondAttribute="leading" constant="16" id="yuN-kR-3ID"/>
+                                        <constraint firstItem="riJ-OJ-tLu" firstAttribute="leading" secondItem="IEG-GY-uj3" secondAttribute="leadingMargin" id="52Z-Vy-UuF"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="riJ-OJ-tLu" secondAttribute="trailing" id="71l-cm-PNk"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="M7W-eZ-Pm3" secondAttribute="trailing" id="A5H-ue-qMR"/>
+                                        <constraint firstItem="M7W-eZ-Pm3" firstAttribute="top" secondItem="IEG-GY-uj3" secondAttribute="topMargin" id="Ekg-s1-u5o"/>
+                                        <constraint firstItem="riJ-OJ-tLu" firstAttribute="top" secondItem="M7W-eZ-Pm3" secondAttribute="bottom" constant="8" id="Jh0-nc-WTc"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="47U-CQ-hti" secondAttribute="bottom" constant="8.5" id="MlK-rf-5D4"/>
+                                        <constraint firstItem="47U-CQ-hti" firstAttribute="top" secondItem="riJ-OJ-tLu" secondAttribute="bottom" constant="8" id="dW3-5H-mRe"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="47U-CQ-hti" secondAttribute="trailing" id="m1m-cS-JBm"/>
+                                        <constraint firstItem="47U-CQ-hti" firstAttribute="leading" secondItem="IEG-GY-uj3" secondAttribute="leadingMargin" id="yNc-Sa-Ygc"/>
+                                        <constraint firstItem="M7W-eZ-Pm3" firstAttribute="leading" secondItem="IEG-GY-uj3" secondAttribute="leadingMargin" id="ybs-vb-t0V"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="airportNameLabel" destination="UR0-e7-76T" id="lw9-Ls-nwg"/>
-                                    <outlet property="cityLabel" destination="AOM-BF-NWf" id="Jie-Pg-rUk"/>
-                                    <outlet property="codeLabel" destination="els-gi-lKf" id="fMF-5D-fm1"/>
+                                    <outlet property="airportLabel" destination="M7W-eZ-Pm3" id="vl9-t1-3b8"/>
+                                    <outlet property="cityLabel" destination="riJ-OJ-tLu" id="UTb-us-Cfj"/>
+                                    <outlet property="icaoLabel" destination="47U-CQ-hti" id="M9O-Lk-TNd"/>
                                     <segue destination="YBV-Zf-v5J" kind="show" identifier="ShowFlights" id="DAB-a6-lEd"/>
                                 </connections>
                             </tableViewCell>
